--- a/galleries/snapshots/index.html
+++ b/galleries/snapshots/index.html
@@ -135,7 +135,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url": "01-abendpfauenauge-1.png", "title": "Abendpfauenauge 1", "size": {"w": 180, "h": 126}, "url_thumb": "01-abendpfauenauge-1.thumbnail.png"}, {"url": "01-abendpfauenauge-2.png", "title": "Abendpfauenauge 2", "size": {"w": 161, "h": 180}, "url_thumb": "01-abendpfauenauge-2.thumbnail.png"}, {"url": "01-abendpfauenauge-3.png", "title": "Abendpfauenauge 3", "size": {"w": 180, "h": 125}, "url_thumb": "01-abendpfauenauge-3.thumbnail.png"}, {"url": "02-brueder-1.png", "title": "Brueder 1", "size": {"w": 180, "h": 135}, "url_thumb": "02-brueder-1.thumbnail.png"}, {"url": "03-ist-nass-draussen.png", "title": "Ist nass draussen", "size": {"w": 180, "h": 135}, "url_thumb": "03-ist-nass-draussen.thumbnail.png"}];
+jsonContent = [{"size": {"h": 126, "w": 180}, "url_thumb": "01-abendpfauenauge-1.thumbnail.png", "url": "01-abendpfauenauge-1.png", "title": "Abendpfauenauge 1"}, {"size": {"h": 180, "w": 161}, "url_thumb": "01-abendpfauenauge-2.thumbnail.png", "url": "01-abendpfauenauge-2.png", "title": "Abendpfauenauge 2"}, {"size": {"h": 125, "w": 180}, "url_thumb": "01-abendpfauenauge-3.thumbnail.png", "url": "01-abendpfauenauge-3.png", "title": "Abendpfauenauge 3"}, {"size": {"h": 135, "w": 180}, "url_thumb": "02-brueder-1.thumbnail.png", "url": "02-brueder-1.png", "title": "Brueder 1"}, {"size": {"h": 135, "w": 180}, "url_thumb": "03-ist-nass-draussen.thumbnail.png", "url": "03-ist-nass-draussen.png", "title": "Ist nass draussen"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
