Added: Water damage gallery :-(.

--- a/galleries/index.html
+++ b/galleries/index.html
@@ -85,6 +85,7 @@
     <h1>galleries</h1>
     <ul>
         <li><a href="snapshots"><i class="icon-folder-open"></i> snapshots</a></li>
+        <li><a href="water-damage"><i class="icon-folder-open"></i> water-damage</a></li>
     </ul>
 
     <div id="gallery_container"></div>
