Added: Water damage gallery.

--- a/galleries/snapshots/index.html
+++ b/galleries/snapshots/index.html
@@ -135,7 +135,7 @@
     
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url": "01-abendpfauenauge-1.png", "url_thumb": "01-abendpfauenauge-1.thumbnail.png", "size": {"w": 180, "h": 126}, "title": "Abendpfauenauge 1"}, {"url": "01-abendpfauenauge-2.png", "url_thumb": "01-abendpfauenauge-2.thumbnail.png", "size": {"w": 161, "h": 180}, "title": "Abendpfauenauge 2"}, {"url": "01-abendpfauenauge-3.png", "url_thumb": "01-abendpfauenauge-3.thumbnail.png", "size": {"w": 180, "h": 125}, "title": "Abendpfauenauge 3"}, {"url": "02-brueder-1.png", "url_thumb": "02-brueder-1.thumbnail.png", "size": {"w": 180, "h": 135}, "title": "Brueder 1"}, {"url": "03-ist-nass-draussen.png", "url_thumb": "03-ist-nass-draussen.thumbnail.png", "size": {"w": 180, "h": 135}, "title": "Ist nass draussen"}];
+jsonContent = [{"title": "Abendpfauenauge 1", "url": "01-abendpfauenauge-1.png", "url_thumb": "01-abendpfauenauge-1.thumbnail.png", "size": {"w": 180, "h": 126}}, {"title": "Abendpfauenauge 2", "url": "01-abendpfauenauge-2.png", "url_thumb": "01-abendpfauenauge-2.thumbnail.png", "size": {"w": 161, "h": 180}}, {"title": "Abendpfauenauge 3", "url": "01-abendpfauenauge-3.png", "url_thumb": "01-abendpfauenauge-3.thumbnail.png", "size": {"w": 180, "h": 125}}, {"title": "Brueder 1", "url": "02-brueder-1.png", "url_thumb": "02-brueder-1.thumbnail.png", "size": {"w": 180, "h": 135}}, {"title": "Ist nass draussen", "url": "03-ist-nass-draussen.png", "url_thumb": "03-ist-nass-draussen.thumbnail.png", "size": {"w": 180, "h": 135}}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
