New Snippet: Material Design Trojaner.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
 <h3 id="recent-articles">Recent Articles</h3>
 <div class="w3-container w3-half">
 <div class="w3-large">
+<a href="blog/material-design-trojaner.html">Material Design Trojaner</a>
+</div>
+<div>
+Breaking News: Das Böse ist nicht immer hässlich. <span class="w3-small">(posted 2015-11-13).</span>
+</div>
+</div>
+<div class="w3-container w3-half">
+<div class="w3-large">
 <a href="blog/elisp-closures-1.html">Emacs Lisp: Meditations on Closures 1</a>
 </div>
 <div>
-Emacs Lisp doesn't have closures. Well, until recently, that is. But simple closures can be easily emulated. <span class="w3-small">(posted 2016-10-16).</span>
+Emacs Lisp doesn't have closures. Well, until recently, that is. But simple closures can be easily emulated. <span class="w3-small">(posted 2015-10-16).</span>
 </div>
 </div>
 <div class="w3-container w3-half">
