New Snipped: Regular Definition sample from Greenland.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 <h3 id="recent-articles">Recent Articles</h3>
 <div class="w3-container w3-half">
 <div class="w3-large">
+<a href="blog/regular-definitions-1.html">Regular Definitions</a>
+</div>
+<div>
+Inspired by Lex <span class="w3-small">(posted 2016-08-23).</span>
+</div>
+</div>
+<div class="w3-container w3-half">
+<div class="w3-large">
 <a href="blog/material-design-trojaner.html">Material Design Trojaner</a>
 </div>
 <div>
