--- a/lorem/test1.html
+++ b/lorem/test1.html
@@ -92,7 +92,7 @@ accumsan nisl.</p>
         <div class="footer-container" role="contentinfo"><footer class="wrapper">&copy; Copyright 2013-2018 M E Leypold. Powered by <a href="http://www.tinkerer.me/">Tinkerer</a> and <a href="http://sphinx.pocoo.org/">Sphinx</a>.<imprint> <a href="../imprint.html">Impressum / Imprint</a>.<imprint>
   </footer></div> <!-- footer-container -->
 
-      </div> <!--! end of #container --><script type="text/javascript">    var disqus_shortname = "Glitzersachen";    disqus_count();</script><!--[if lt IE 7 ]>
+      </div> <!--! end of #container --><script type="text/javascript">    var disqus_shortname = "glitzersachen-de";    disqus_count();</script><!--[if lt IE 7 ]>
           <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
           <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
         <![endif]-->
