--- a/search.html
+++ b/search.html
@@ -81,7 +81,7 @@
     <input type="text" name="q" value="" />
     <input type="submit" value="search" />
     <span id="search-progress" style="padding-left: 10px"></span>
-  </form><div id="search-results"></div></article><aside class="sidebar"><section><div class="widget">
+  </form><div id="search-results"></div></article><aside class="sidebar"><section></section><section><div class="widget">
     <h1>Recent Posts</h1>
     <ul><li>
             <a href="2018/01/20/rebooting_this_site.html">Rebooting this Site</a>
