--- a/imprint.html
+++ b/imprint.html
@@ -104,7 +104,26 @@ texts themselves.</p>
 </div>
 <div class="section" id="comment-policy">
 <h2>Comment Policy</h2>
-<p>In the works …</p>
+<p>The general policy is: Stay polite and don’t write anything that you
+wouldn’t write to somebody living accross the street (that is: Knows
+where you live, you have to see each other every other day). Rational
+argument is not to be replaced by invective.</p>
+<p>I do not expect much comments in this blog. Regardless, consider I’m
+doing that in my free time. I do not want to be sued in court because
+somebody thought it necessary to insult somebody else, because
+somebody thought it necessary to parade his or her prejudices. All
+comments in this vein will be deleted, the perpetrators blocked (if
+technically feasible).</p>
+<p>I also don’t like to have too much work with moderation or deletion of
+comments. Notably I don’t want to argue fine print. I’ll therefore
+delete all borderline cases to insults, hate speech, stupidity or
+simply narcissism without serious analysis. You strayed too near to
+border then, so it’ll be your problem that your comment goes to the
+happy hunting ground. Lesson: Don’t stray too near to the border.</p>
+<p>Mind you: This is my blog, and you simply got no right to peddle your
+defects here: If you need, you should consider going to Facebook (but
+good luck with free speech there) or consider building a blog or
+website of your own.</p>
 </div>
 </div>
 
