--- a/lorem/math-examples.html
+++ b/lorem/math-examples.html
@@ -70,6 +70,12 @@ purus. Cum sociis natoque penatibus et magnis dis parturient montes,
 nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam
 tristique diam non turpis. Cras placerat accumsan nulla. Nullam
 rutrum. Nam vestibulum accumsan nisl.</p>
+<p>And <span class="math">\(\lambda x. x\)</span>.</p>
+<div class="math">
+\[\begin{split}\begin{pmatrix}
+  \alpha_0 &amp; \beta^{*} \\
+  \gamma^{*} &amp; \delta_1
+\end{pmatrix}\end{split}\]</div>
 </div>
 
     <div class="postmeta">
